<resources>
    <string name="app_name">TODO</string>

    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot">Forgot?</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="select_image">Select an Image</string>
    <string name="take_image">Take an Image</string>
    <string name="hold_on_we_are_loading">Hold On! we are loading</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--ERROR STRINGS-->
    <string name="name_required">Name is required!</string>
    <string name="email_required">Email Id is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="please_provide_required_details">Please provide required details!</string>
    <string name="error_while_login">Error while login!</string>
    <string name="error_while_sign_up">Error while Sign Up with Email!</string>
    <string name="please_select_profile_image">Please select profile image!</string>
</resources>
